gitops/infrastructure/flagger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flagger-system
  labels:
    istio.io/dataplane-mode: ambient
